# realworldnlp

./: pyproject.toml
notebooks/: 20220512-1st_tests.ipynb  CHp3.4 - GloVe.ipynb  Chapter3-word-tokenization.ipynb  Chapter3a-skipgram.ipynb
