[tool.poetry]
name = "realworldnlp"
version = "0.1.0"
description = "My working for the book Real-World NLP"
authors = ["geekev <kevin@brandwatch.com>"]

[tool.poetry.dependencies]
python = "^3.9"
allennlp = "2.5.0"
allennlp-models = "2.5.0"
tokenizers = "*"
jupyterlab = "^3.4.1"
ipywidgets = "^7.7.0"
allennlp-server = {path = "../../git/allennlp-server"}
nltk = "^3.7"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
